--- a/FitTrack/src/main/resources/static/css/styleActivities.css
+++ b/FitTrack/src/main/resources/static/css/styleActivities.css
@@ -400,7 +400,7 @@ body {
 .remove-activity-btn::before {
   content: 'Remove';
   position: absolute;
-  top: -40px; /* Adjust the distance from the button */
+  top: -40px;
   left: 50%;
   transform: translateX(-50%);
   padding: 5px;
