--- a/FitTrack/src/main/resources/static/css/styleMain.css
+++ b/FitTrack/src/main/resources/static/css/styleMain.css
@@ -1,19 +1,3 @@
-/* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
-
-:root {
-  --color-primary: #5ec576;
-  --color-secondary: #ffcb03;
-  --color-tertiary: #ff585f;
-  --color-primary-darker: #4bbb7d;
-  --color-secondary-darker: #ffbb00;
-  --color-tertiary-darker: #fd424b;
-  --color-primary-opacity: #5ec5763a;
-  --color-secondary-opacity: #ffcd0331;
-  --color-tertiary-opacity: #ff58602d;
-  --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
-  --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -33,11 +17,9 @@ body {
   background-color: #f3f3f3;
 }
 
-/* GENERAL ELEMENTS */
 .section {
   padding: 7rem 3rem;
   border-top: 1px solid #ddd;
-
   transition: transform 1s, opacity 1s;
 }
 
@@ -57,7 +39,7 @@ body {
   text-transform: uppercase;
   margin-top: 4rem;
   margin-bottom: 4rem;
-  text-align: center; /* Optional: Center-align the text */
+  text-align: center;
 }
 
 .section__description__dark {
@@ -66,7 +48,7 @@ body {
   text-transform: uppercase;
   margin-top: 4rem;
   margin-bottom: 4rem;
-  text-align: center; /* Optional: Center-align the text */
+  text-align: center;
   color: white;
 }
 
@@ -78,7 +60,6 @@ body {
 
 .btn {
   display: inline-block;
-  background-color: var(--color-primary);
   font-size: 1.6rem;
   font-family: inherit;
   font-weight: 500;
@@ -89,9 +70,6 @@ body {
   transition: all 0.3s;
 }
 
-.btn:hover {
-  background-color: var(--color-primary-darker);
-}
 
 .btn--text {
   display: inline-block;
@@ -99,7 +77,6 @@ body {
   font-size: 1.7rem;
   font-family: inherit;
   font-weight: 500;
-  color: var(--color-primary);
   border: none;
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
@@ -111,7 +88,6 @@ p {
   color: #666;
 }
 
-/* This is BAD for accessibility! Don't do in the real world! */
 button:focus {
   outline: none;
 }
@@ -124,7 +100,6 @@ img {
   filter: blur(20px);
 }
 
-/* NAVIGATION */
 .nav {
   display: flex;
   justify-content: space-between;
@@ -136,7 +111,6 @@ img {
   background-color: rgb(9, 15, 37);
 }
 
-/* nav and stickly class at the same time */
 .nav.sticky {
   position: fixed;
   background-color: rgb(9, 15, 37, 0.9);
@@ -179,11 +153,9 @@ img {
 .nav__link--btn:hover,
 .nav__link--btn:active {
   color: inherit;
-  background-color: var(--color-primary-darker);
   color: #333;
 }
 
-/* HEADER */
 .header {
   height: 100vh;
   display: flex;
@@ -194,17 +166,13 @@ img {
 .header__title {
   flex: 1;
   width: 100%;
-  display: flex; /* Use flex instead of grid */
+  display: flex;
   row-gap: 3rem;
   align-content: center;
   justify-content: center;
   align-items: flex-start;
   justify-items: start;
-  /*background: linear-gradient(rgb(9, 15, 37), rgb(9, 15, 37), rgb(20, 30, 60), rgb(9, 15, 37), rgb(9, 15, 37));*/
   color: #393e46;
-  /*background: linear-gradient(to bottom, #ff8c00, #f8f8f8);*/
-  /*background: linear-gradient(rgb(9, 15, 37), rgb(9, 15, 37), rgb(20, 30, 60), rgb(9, 15, 37), rgb(9, 15, 37));*/
-
   background-color: white;
   background-size: 100% 100%;
 }
@@ -241,10 +209,8 @@ h4 {
   z-index: -1;
   opacity: 0.7;
   transform: scale(1.07, 1.05) skewX(-15deg);
-  background-image: var(--gradient-primary);
 }
 
-/* FEATURES */
 .features {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -267,7 +233,6 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-primary-opacity);
   height: 5.5rem;
   width: 5.5rem;
   border-radius: 50%;
@@ -277,7 +242,6 @@ h4 {
 .features__icon svg {
   height: 2.5rem;
   width: 2.5rem;
-  fill: var(--color-primary);
 }
 
 .features__header {
@@ -285,7 +249,6 @@ h4 {
   margin-bottom: 1rem;
 }
 
-/* OPERATIONS */
 .operations {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
@@ -309,31 +272,12 @@ h4 {
   display: inline-block;
 }
 
-.operations__tab--1 {
-  background-color: var(--color-secondary);
-}
-
-.operations__tab--1:hover {
-  background-color: var(--color-secondary-darker);
-}
-
-.operations__tab--3 {
-  background-color: var(--color-tertiary);
-  margin: 0;
-}
-
-.operations__tab--3:hover {
-  background-color: var(--color-tertiary-darker);
-}
-
 .operations__tab--active {
   transform: translateY(-66%);
 }
 
 .operations__content {
   display: none;
-
-  /* JUST PRESENTATIONAL */
   font-size: 1.7rem;
   padding: 2.5rem 7rem 6.5rem 7rem;
 }
@@ -369,33 +313,11 @@ h4 {
   grid-column: 2;
 }
 
-.operations__icon--1 {
-  background-color: var(--color-secondary-opacity);
-}
-.operations__icon--2 {
-  background-color: var(--color-primary-opacity);
-}
-.operations__icon--3 {
-  background-color: var(--color-tertiary-opacity);
-}
-.operations__icon--1 svg {
-  fill: var(--color-secondary-darker);
-}
-.operations__icon--2 svg {
-  fill: var(--color-primary);
-}
-.operations__icon--3 svg {
-  fill: var(--color-tertiary);
-}
-
-/* SLIDER */
 .slider {
   max-width: 100rem;
   height: 50rem;
   margin: 0 auto;
   position: relative;
-
-  /* IN THE END */
   overflow: hidden;
 }
 
@@ -404,17 +326,13 @@ h4 {
   top: 0;
   width: 100%;
   height: 50rem;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
-  /* THIS creates the animation! */
   transition: transform 1s;
 }
 
 .slide > img {
-  /* Only for images that have different size than slide */
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -464,9 +382,6 @@ h4 {
   margin-right: 1.75rem;
   cursor: pointer;
   transition: all 0.5s;
-
-  /* Only necessary when overlying images */
-  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
 }
 
 .dots__dot:last-child {
@@ -474,12 +389,10 @@ h4 {
 }
 
 .dots__dot--active {
-  /* background-color: #fff; */
   background-color: #888;
   opacity: 1;
 }
 
-/* TESTIMONIALS */
 .testimonial {
   width: 65%;
   position: relative;
@@ -493,7 +406,6 @@ h4 {
   line-height: 1;
   font-size: 20rem;
   font-family: inherit;
-  color: var(--color-primary);
   z-index: -1;
 }
 
@@ -602,20 +514,6 @@ h4 {
   font-size: 1.4rem;
 }
 
-/* MODAL WINDOW */
-/* .modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 60rem;
-  background-color: #f3f3f3;
-  padding: 5rem 6rem;
-  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-  transition: all 0.5s;
-} */
-
 .overlay {
   position: fixed;
   top: 0;
@@ -677,26 +575,14 @@ h4 {
   opacity: 0;
 }
 
-/* COOKIE MESSAGE */
-.cookie-message {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  background-color: white;
-  color: #bbb;
-  font-size: 1.5rem;
-  font-weight: 400;
-}
-
 .app_logo {
   font-family: 'Brush Script MT', cursive;
   color: white;
 }
 
 .info__text {
-  margin-top: 20vh; /* Adjust this value as needed */
-  text-align: center; /* Optional: Center-align the text */
+  margin-top: 20vh;
+  text-align: center;
 }
 
 .white_section {
@@ -710,22 +596,22 @@ h4 {
 .section1_text {
   line-height: 1.3;
   font-weight: 500;
-  text-align: center; /* Optional: Center-align the text */
+  text-align: center;
   font-size: 2rem;
 }
 
 .section2_text {
   line-height: 1.3;
   font-weight: 500;
-  text-align: center; /* Optional: Center-align the text */
+  text-align: center;
   font-size: 2rem;
   color: white;
-  margin-bottom: 8rem; /* Add margin-bottom to create space between text and creatures */
+  margin-bottom: 8rem;
 }
 
 .creatures-container {
   display: flex;
-  gap: 1rem; /* Adjust the gap between creatures as needed */
+  gap: 1rem;
 }
 
 .creature {
@@ -734,11 +620,11 @@ h4 {
       39,
       45,
       87
-  ); /* Adjust the values for a bit more lighter shade */
+  );
   padding: 1rem;
   text-align: center;
-  height: 150px; /* Adjust the height of the creatures as needed */
-  border-radius: 10px; /* Add border-radius to round the corners */
+  height: 150px;
+  border-radius: 10px;
 }
 
 .register {
@@ -750,12 +636,12 @@ h4 {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.3s ease; /* Adding a smooth transition effect */
+  transition: background 0.3s ease;
 }
 
 .register:hover {
-  background: linear-gradient(-110deg, #7d74e5 0%, #be2afa 100%); /* Adjusted color for hover effect */
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* White shadow for shine effect */
+  background: linear-gradient(-110deg, #7d74e5 0%, #be2afa 100%);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 
 .space {
