fix(): code refactoring

--- a/FitTrack/src/main/resources/templates/registerUser.html
+++ b/FitTrack/src/main/resources/templates/registerUser.html
@@ -63,8 +63,8 @@
       padding: 10px;
       margin-bottom: 15px;
       box-sizing: border-box;
-      border: 1px solid #ccc; /* Subtle border color */
-      border-radius: 3px; /* Rounded corners */
+      border: 1px solid #ccc;
+      border-radius: 3px;
     }
 
     button {
