fix(): code refactoring

--- a/FitTrack/src/main/resources/templates/verifyUser.html
+++ b/FitTrack/src/main/resources/templates/verifyUser.html
@@ -10,7 +10,7 @@
     }
 
     body {
-      background-color: #f2f2f2; /* Slightly darker white background for the entire screen */
+      background-color: #f2f2f2;
       margin: 0;
       display: flex;
       align-items: center;
@@ -21,17 +21,17 @@
     .container {
       position: relative;
       width: 300px;
-      height: 120px; /* Adjusted height */
+      height: 120px;
       padding: 20px;
-      background-color: #ffffff; /* White background */
-      border-radius: 10px; /* Added border-radius for rounded corners */
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Added box shadow for faint backlight */
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
     .logo {
       text-align: center;
       font-size: 1.5rem;
-      margin-bottom: 5px; /* Adjusted margin */
+      margin-bottom: 5px;
       font-family: 'Brush Script MT', cursive;
     }
 
@@ -49,12 +49,12 @@
           -110deg,
           #be2afa 0%,
           #5c51ce 100%
-      ); /* Gradient background for the button */
-      color: #ffffff; /* White text color */
+      );
+      color: #ffffff;
       border: none;
-      border-radius: 5px; /* Rounded corners for the button */
+      border-radius: 5px;
       cursor: pointer;
-      margin-bottom: 10px; /* Adjust the margin-bottom value as needed */
+      margin-bottom: 10px;
     }
   </style>
 </head>
