--- a/FitTrack/src/main/resources/templates/loginUser.html
+++ b/FitTrack/src/main/resources/templates/loginUser.html
@@ -7,7 +7,7 @@
   <title>Login to FitTrack</title>
   <style>
     body {
-      background-color: #f2f2f2; /* Slightly darker white background for the entire screen */
+      background-color: #f2f2f2;
       margin: 0;
       display: flex;
       align-items: center;
@@ -18,11 +18,11 @@
     .container {
       position: relative;
       width: 300px;
-      height: 270px; /* Adjusted height */
+      height: 270px;
       padding: 20px;
-      background-color: #ffffff; /* White background */
-      border-radius: 10px; /* Added border-radius for rounded corners */
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Added box shadow for faint backlight */
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
     .larger-height {
@@ -38,7 +38,7 @@
     .logo {
       text-align: center;
       font-size: 1.5rem;
-      margin-bottom: 5px; /* Adjusted margin */
+      margin-bottom: 5px;
       font-family: 'Brush Script MT', cursive;
     }
 
@@ -50,7 +50,7 @@
     label {
       display: block;
       margin-bottom: 10px;
-      border-radius: 5px; /* Rounded corners for labels */
+      border-radius: 5px;
     }
 
     input {
@@ -58,8 +58,8 @@
       padding: 10px;
       margin-bottom: 15px;
       box-sizing: border-box;
-      border: 1px solid #ccc; /* Subtle border color */
-      border-radius: 3px; /* Rounded corners */
+      border: 1px solid #ccc;
+      border-radius: 3px;
     }
 
     button {
@@ -70,12 +70,12 @@
           -110deg,
           #be2afa 0%,
           #5c51ce 100%
-      ); /* Gradient background for the button */
-      color: #ffffff; /* White text color */
+      );
+      color: #ffffff;
       border: none;
-      border-radius: 5px; /* Rounded corners for the button */
+      border-radius: 5px;
       cursor: pointer;
-      margin-bottom: 10px; /* Adjust the margin-bottom value as needed */
+      margin-bottom: 10px;
     }
 
     .login-link {
