fix(): changed the style of the page

--- a/FitTrack/src/main/resources/templates/mainPage.html
+++ b/FitTrack/src/main/resources/templates/mainPage.html
@@ -89,7 +89,7 @@
         data-src="/images/unhealthy-versus-healthy-foods.jpg"
         alt="Credit card"
         class="features__img"
-        style="height: 300px;"
+        style="height: 300px; width: 550px; margin-left: 35px;"
       />
       <div class="features__feature">
         <h5 class="features__header">Goal Comparison</h5>
@@ -111,7 +111,7 @@
       </h3>
       <div class="creatures-container">
         <div class="creature">
-          <p class="section2_text">Create training</p>
+          <p class="section2_text">Create Training</p>
         </div>
         <div class="creature">
           <p class="section2_text">Begin Workout</p>
